--- a/src/Bui_EKG_ML_Model.ipynb
+++ b/src/Bui_EKG_ML_Model.ipynb
@@ -100,7 +100,7 @@
         "id": "5Fd5Xhg6nv19",
         "outputId": "2407ebd7-c7b9-47f8-bf86-4252ba3acfbe"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "id": "xD9lr-pzaZ_5",
         "outputId": "a56582a6-4058-4a43-879c-edd9fda98a52"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +672,7 @@
         "id": "0lIT80UvnM4b",
         "outputId": "2fc6ad83-e6aa-4690-bd60-15b77713d7d5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,7 +701,7 @@
         "id": "4GEQ40oLte4g",
         "outputId": "c6dcefeb-8144-4be2-b254-3a1925cf3b25"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,7 +751,7 @@
         "id": "azkioI0kkmGm",
         "outputId": "770e4aaa-3ad9-47a7-de03-06eb5852efd2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -897,7 +897,7 @@
         "id": "kyB-HY5ovPSZ",
         "outputId": "3853b592-b4b9-4736-f814-4f42a23644da"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,7 +942,7 @@
         "id": "-XT8faox6k0n",
         "outputId": "97c8a870-ebcf-40bf-b8ff-dfaa3dc6f855"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1004,7 @@
         "id": "n-v4voWYbHAT",
         "outputId": "53af783e-e29f-4ca9-f414-baa68b341a4d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1036,7 +1036,7 @@
         "id": "WVctYNm8Pf9T",
         "outputId": "410db4b0-ad8a-400a-95b4-97fc07221482"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1424,7 +1424,7 @@
         "id": "4F8uzPMsC_1v",
         "outputId": "5ebd2286-3793-4592-edc5-dd36f26b2d49"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1957,8 +1957,7 @@
         "## Data Preprocessing\n",
         "1. Accounting for Categorical data (nominal/ordinal) with one-hot encoding\n",
         "2. Checking for Missing Values (already done before partition)\n",
-        "  - Note: not sure if should do after partition or not\n",
-        "3. Data Normalization <-- NOTE: might perform (depends on model)"
+        "3. Data Normalization <-- Note: requirement depends on model"
       ],
       "metadata": {
         "id": "MjWbQ_3IcyxK"
@@ -1987,7 +1986,7 @@
         "id": "h5oTKBLz11uE",
         "outputId": "c4e49f0f-d4c4-4721-d772-cec995613830"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2042,7 +2041,7 @@
         "id": "tDSmmY65MfJS",
         "outputId": "2ee50170-25c2-4cfa-cb65-0fe0db845f02"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3093,9 +3092,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Data Standardization\n",
-        "\n",
-        "- depending on some models this might be useful <-- may change later"
+        "### Data Standardization\n"
       ],
       "metadata": {
         "id": "aLJ4K0RvwAs2"
@@ -3129,7 +3126,7 @@
         "id": "iremSSU4wUsf",
         "outputId": "3d71c148-a1d8-4c47-9a1b-9d723c9635de"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4226,7 +4223,7 @@
         "id": "HKmWm8lJzzVE",
         "outputId": "d15c1381-c14c-44e2-fcd9-c8194af07c17"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4257,7 +4254,7 @@
       "metadata": {
         "id": "ZWiH9_lQQb84"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4275,7 +4272,7 @@
         "id": "EhB2RjU-teCT",
         "outputId": "b2ed7d05-e127-4e5a-bed2-8e3cb750ee71"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4325,7 +4322,7 @@
         "id": "ufsZ6k2uRFqd",
         "outputId": "dd92e9ce-031a-4188-a1ab-70166dee3f55"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5298,7 +5295,7 @@
         "id": "d24joT8yTU-r",
         "outputId": "15555752-0c36-456c-a372-b15d133aa74c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5312,7 +5309,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Preliminary Visiualizations"
+        "# Preliminary Visiualizations\n",
+        "- visuals for understanding the dataset after preprocessing step\n",
+        "- Next steps: model selection & development"
       ],
       "metadata": {
         "id": "kLoZp4cGlTT5"
@@ -5330,7 +5329,7 @@
         "id": "mA_gx01Mp4yA",
         "outputId": "36521a19-cf10-42a9-be44-e2dfe981736f"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5380,7 +5379,7 @@
         "id": "bQs02zQ9mBWL",
         "outputId": "99b1b83c-1202-4941-f566-37423c14cc76"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5423,7 +5422,7 @@
         "id": "OkDjK6QUlaUS",
         "outputId": "062fbc68-6ece-4ae4-853f-bc451e4480ce"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5453,17 +5452,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Developing a Model\n",
-        "\n",
-        "1. See project plan for next steps"
-      ],
-      "metadata": {
-        "id": "kblWA2T5cTX5"
-      }
     }
   ]
 }
